[#40685] – cleaned up code using sonarlint.